force-app/main/default/objects/Configurator__c/Configurator__c.object-meta.xml
<CustomObject>
    <label>Configurator</label>
    <nameField>
        <displayFormat>CN-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configurators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>