force-app/main/default/objects/Configurator__c/fields/Child_Objects__c.field-meta.xml
<CustomField>
    <fullName>Child_Objects__c</fullName>
    <label>Child Objects</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>