force-app/main/default/objects/Configurator__c/fields/Config_Json_Text__c.field-meta.xml
<CustomField>
    <fullName>Config_Json_Text__c</fullName>
    <label>Config Json Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>