force-app/main/default/objects/Configurator__c/fields/Configurator_Name__c.field-meta.xml
<CustomField>
    <fullName>Configurator_Name__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Configurator Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>