force-app/main/default/objects/Configurator__c/fields/Json_String_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Json_String_Level_2__c</fullName>
    <label>Json String Level 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>