force-app/main/default/objects/Configurator__c/fields/Selected_Main_Object_Fields__c.field-meta.xml
<CustomField>
    <fullName>Selected_Main_Object_Fields__c</fullName>
    <label>Selected Main Object Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>